--- a/public/html/home.html
+++ b/public/html/home.html
@@ -12,7 +12,7 @@
 <body>
     <header class="navbar navbar-expand-md navbar-light border-bottom">
         <div class="container-fluid">
-            <a class="navbar-brand ms-2"href="../index.html">
+            <a class="navbar-brand ms-2"href="./home.html">
                 <img class="d-inline-block" width="200" height="65" src="../images/logo.png" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,7 +24,7 @@
                         <a href="./achievements.html" class="nav-link">Logros</a>
                     </li>
                     <li class="nav-item fs-4 fw-light mx-3">
-                        <a href="./progress.html" class="nav-link" target="blank">Progreso</a>
+                        <a href="./progress.html" class="nav-link">Progreso</a>
                     </li>
                     <li class="nav-item fs-4 fw-light mx-3">
                         <a href="https://mx.ternium.com/es/contactanos#contactanos" class="nav-link" target="blank">Contacto</a>
@@ -41,12 +41,22 @@
             </div>
         </div>
     </header>
-    <div class="row mx-0 align-items-center justify-content-center">
-        <div class="col-lg-2">
-            ¿Como jugar?
+    <div class="row mx-0 game-container">
+        <div class="col-xxl-3">
+            <h1 class="display-5">¿Como jugar?</h1> 
+            <p class="lead my-4">Usa tu touchpad o mouse para interactuar con el juego.</p>
+            <p class="lead my-4">Oprime click derecho para cambiar el ángulo de la camara.</p>
         </div>
-        <div class="col-lg-8">
+        <div class="col-lg-7">
             <img src="../images/gameSS.png" alt="">
+        </div>
+        <div class="col-xxl-2">
+            <ul class="list-group list-group-flush list-group-numbered m-2">
+                <span class="display-5 mb-2">Ranking</span>
+                <li class="list-group-item my-2">Juan Perez</li>
+                <li class="list-group-item my-2">Javier Pedraza</li>
+                <li class="list-group-item my-2">Christian Romo</li>
+            </ul>
         </div>
     </div>
 
