Thrird commit, cambio en grafica de progreso y pagina inicio jugador

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="./public/css/bootstrap.css">
     <link rel="stylesheet" href="./public/css/styles.css">
 
-    <script src="script.js"></script>
     <title>Ternium Steel</title>
 </head>
 <body>
@@ -50,7 +49,7 @@
                     <div class="invalid-feedback" id="passwordFeedback">Email o constraseña incorrecta.</div>
                 </div>
                 <div class="text-center">
-                    <button type="submit" class="btn btn-outline-light btn-lg mb-5 m-2" id="loginBtn">Ingresar</button>
+                    <a class="btn btn-outline-light btn-lg mb-5 m-2" id="loginBtn" href="./public/html/home.html">Ingresar</a>
                 </div>
                 <div>
                     <a class="btn btn-light w-100 text-dark d-block py-1 text-center rounded-0 rounded-bottom" href="./public/html/sign-up.html">
@@ -63,7 +62,7 @@
     <!-- FOOTER -->
     <footer class="w-100 bg-light bg-gradient fixed-bottom border-top">
         <div class="container text-center p-2">
-            <p class="h5 p-3">&copy; Ternium Steel</p>
+            <p class="h5">&copy; Ternium Steel</p>
         </div>
     </footer>
 </body>
