--- a/public/html/home.html
+++ b/public/html/home.html
@@ -46,11 +46,6 @@
             <h1 class="display-5">¿Como jugar?</h1> 
             <p class="lead my-4">Usa tu touchpad o mouse para interactuar con el juego.</p>
             <p class="lead my-4">Oprime click derecho para cambiar el ángulo de la camara.</p>
-        </div>
-        <div class="col-lg-7">
-            <img src="../images/gameSS.png" alt="">
-        </div>
-        <div class="col-xxl-2">
             <ul class="list-group list-group-flush list-group-numbered m-2">
                 <span class="display-5 mb-2">Ranking</span>
                 <li class="list-group-item my-2">Juan Perez</li>
@@ -58,12 +53,18 @@
                 <li class="list-group-item my-2">Christian Romo</li>
             </ul>
         </div>
+        <div class="col-lg-7">
+            <img src="../images/gameSS.png" alt="">
+        </div>
+        <div class="col-xxl-2">
+
+        </div>
     </div>
 
     <!-- FOOTER -->
     <footer class="w-100 bg-light bg-gradient fixed-bottom border-top">
         <div class="container text-center p-2">
-            <p class="h5 p-3">&copy; Ternium Steel</p>
+            <p class="h5">&copy; Ternium Steel</p>
         </div>
     </footer>
 </body>
