--- a/public/html/sign-up.html
+++ b/public/html/sign-up.html
@@ -59,7 +59,7 @@
      <!-- FOOTER -->
     <footer class="w-100 bg-light bg-gradient fixed-bottom border-top">
         <div class="container text-center p-2">
-            <p class="h5 p-3">&copy; Ternium Steel</p>
+            <p class="h5">&copy; Ternium Steel</p>
         </div>
     </footer>
 
