--- a/public/html/progress.html
+++ b/public/html/progress.html
@@ -67,13 +67,13 @@
         </div>
         <div class="col-md-8 offset-md-4">
             <h1 class="display-4 my-4">Progeso mensual</h1>
-            <img src="../images/graph.png" class="mx-auto mt-4" alt="">
+            <img src="../images/graph.png" class="mx-auto mt-4 w-50" alt="">
         </div>
     </div>   
     <!-- FOOTER -->
     <footer class="w-100 bg-light bg-gradient fixed-bottom border-top">
         <div class="container text-center p-2">
-            <p class="h5 p-3">&copy; Ternium Steel</p>
+            <p class="h5">&copy; Ternium Steel</p>
         </div>
     </footer> 
 </body>
