--- a/public/admin.html
+++ b/public/admin.html
@@ -20,15 +20,15 @@
                 <div class="container-fluid">
                     <div class="menu-wrapper">
                         <div class="logo">
-                            <a href="index.html"><img src="assets/img/logo/logo.png" alt="" width="200px"></a>
+                            <a href="admin.html"><img src="assets/img/logo/logo.png" alt="" width="200px"></a>
                         </div>
                         <div class="main-menu d-none d-lg-block">
                             <nav>                                                
                                 <ul id="navigation" style="padding-top: 30px; padding-bottom: 30px;">  
-                                    <li><a href="Soporte tecnico.html" target="_blank"> Soporte técnico</a></li>
-                                    <li><a href="RegistroAdmin.html" target="_blank">Registrar nuevo administrador</a></li>
-                                    <li><a href="ranking.html" target="_blank">Ranking</a></li>
-                                    <li><a href="quiz.html" target="_blank">Minijuego Quiz</a></li>
+                                    <li><a href="soporteTecnico.html" target="_blank"> Soporte técnico</a></li>
+                                    <li><a href="RegistroAdmin.html">Registrar nuevo administrador</a></li>
+                                    <li><a href="ranking.html" >Ranking</a></li>
+                                    <li><a href="quiz.html" >Minijuego Quiz</a></li>
                                     <a href="login.html"><button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="background-color: #e74c3c;">Cerrar Sesión</button></a>
                                 </ul>
                             </nav>
