--- a/public/RegistroAdmin.html
+++ b/public/RegistroAdmin.html
@@ -23,14 +23,14 @@
                     <div class="menu-wrapper">
                         <!-- Logo -->
                         <div class="logo">
-                            <img src="assets/img/logo/logo.png" alt="Logo Ternium" width="135"></a>
+                            <a href="./admin.html"><img src="assets/img/logo/logo.png" alt="Logo Ternium" width="135"></a>
                         </div>
                         <!-- Main-menu -->
                         <div class="main-menu d-none d-lg-block">
                             <nav>                                                
                                 <ul id="navigation">  
-                                    <li><a href="https://mx.ternium.com/es">Sobre nosotros</a></li>
-                                    <li><a href="Soporte Tecnico.html">Soporte técnico</a></li>
+                                    <li><a href="https://mx.ternium.com/es" target="_blank">Sobre nosotros</a></li>
+                                    <li><a href="./soporteTecnico.html" target="_blank">Soporte técnico</a></li>
                                 </ul>
                             </nav>
                         </div>
