--- a/public/cart.html
+++ b/public/cart.html
@@ -38,28 +38,32 @@
               <!-- Logo -->
               <div class="logo">
                 <a href="./Game/index.html">
-                  <img src="assets/img/logo/logo.png" alt="" width="135"/>
+                  <img src="assets/img/logo/logo.png" alt="" width="150"/>
                 </a>
               </div>
               <!-- Main-menu -->
-              <div class="main-menu d-none d-lg-block"></div>
+              <div class="main-menu d-none d-lg-block">
+                <nav>
+                  <ul id="navigation" >
+                    <li >
+                      <a href="./Game/index.html" class="mr-2">
+                        <button class="btn btn-outline-success my-2 my-sm-0 p-4 rounded" style="background-color: #7a7a80;" >
+                          Juego
+                        </button>
+                        </a>
+                    </li> 
+                    <li>
+                      <a href="login.html">
+                        <button class="btn btn-outline-success my-2 my-sm-0 p-4 rounded" type="submit" style="background-color: #e74c3c;" >
+                          Cerrar Sesión
+                        </button>
+                      </a>
+                    </li>
+                  </ul>
+                </nav>
+              </div>
               <!-- Header Right -->
-              <nav>
-                <ul
-                  id="navigation"
-                  style="padding-top: 30px; padding-bottom: 30px;"
-                >
-                  <a href="login.html"
-                    ><button
-                      class="btn btn-outline-success my-2 my-sm-0"
-                      type="submit"
-                      style="background-color: #e74c3c;"
-                    >
-                      Cerrar Sesión
-                    </button></a
-                  >
-                </ul>
-              </nav>
+
             </div>
             <!-- Mobile Menu -->
             <div class="col-12">
@@ -73,7 +77,7 @@
     <main>
       <!--================End Cart Area =================-->
 
-      <h2 class="card-title" style="text-align: center">
+      <h2 class="card-title mt-5" style="text-align: center">
         Progreso mensual del jugador
       </h2>
       <p></p>
