--- a/public/quiz.html
+++ b/public/quiz.html
@@ -28,7 +28,7 @@
                                     <li><a href="Soporte tecnico.html" target="_blank"> Soporte técnico</a></li>
                                     <li><a href="RegistroAdmin.html" target="_blank">Registrar nuevo administrador</a></li>
                                     <li><a href="ranking.html" target="_blank">Ranking</a></li>
-                                    <a href="login.html"><button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="background-color: #e74c3c;">Cerrar Sesión</button></a>
+                                    <a href="login.html"><button class="btn btn-outline-success my-2 my-sm-0 p-3 rounded" type="submit" style="background-color: #e74c3c;">Cerrar Sesión</button></a>
                                 </ul>
                             </nav>
                         </div>                       
